# Openings_based_registration

./: CMakeLists.txt  README.md
data/: STR721_Int.ply  int_lines.txt  out_lines.txt
include/: Energy.hpp  Transformation.hpp  clustering.hpp  match_data.hpp
src/: O_Registration.cpp
